WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156243
CVE-2016-4603
[iOS] media title sometimes remain in Control Center after tab is closed
https://bugs.webkit.org/show_bug.cgi?id=156243
Summary
[iOS] media title sometimes remain in Control Center after tab is closed
Eric Carlson
Reported
2016-04-05 11:42:59 PDT
Remove audio/video title from Control Center as soon as a tab is closed.
Attachments
Proposed patch
(6.59 KB, patch)
2016-04-05 13:53 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch.
(6.55 KB, patch)
2016-04-05 13:54 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Proposed patch
(15.16 KB, text/plain)
2016-04-11 10:38 PDT
,
Eric Carlson
no flags
Details
Updated Patch
(15.37 KB, patch)
2016-04-11 10:44 PDT
,
Eric Carlson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-yosemite
(557.38 KB, application/zip)
2016-04-11 11:30 PDT
,
Build Bot
no flags
Details
Updated Patch.
(16.10 KB, patch)
2016-04-11 14:02 PDT
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
Patch for landing.
(15.98 KB, patch)
2016-04-12 06:10 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-04-05 11:43:28 PDT
<
rdar://problem/20167445
>
Eric Carlson
Comment 2
2016-04-05 13:53:03 PDT
Created
attachment 275690
[details]
Proposed patch
Eric Carlson
Comment 3
2016-04-05 13:54:32 PDT
Created
attachment 275691
[details]
Updated patch.
Eric Carlson
Comment 4
2016-04-11 10:38:41 PDT
Created
attachment 276154
[details]
Proposed patch
WebKit Commit Bot
Comment 5
2016-04-11 10:40:21 PDT
Attachment 276154
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:271: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:274: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:278: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 6
2016-04-11 10:44:33 PDT
Created
attachment 276155
[details]
Updated Patch
WebKit Commit Bot
Comment 7
2016-04-11 10:46:59 PDT
Attachment 276155
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:278: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 8
2016-04-11 11:30:14 PDT
Comment on
attachment 276155
[details]
Updated Patch
Attachment 276155
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1137491
Number of test failures exceeded the failure limit.
Build Bot
Comment 9
2016-04-11 11:30:24 PDT
Created
attachment 276158
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Eric Carlson
Comment 10
2016-04-11 14:02:16 PDT
Created
attachment 276173
[details]
Updated Patch.
Darin Adler
Comment 11
2016-04-11 18:10:30 PDT
Comment on
attachment 276173
[details]
Updated Patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=276173&action=review
> Source/WebCore/html/HTMLMediaElement.h:738 > + PlatformMediaSession::CharacteristicsFlags characteristics() const override;
Probably should say "final" instead of "override"; same for most other functions in the file.
> Source/WebCore/platform/audio/PlatformMediaSession.h:188 > + virtual PlatformMediaSession::CharacteristicsFlags characteristics() const = 0; > +
Extra blank line here; should not add that.
> Source/WebCore/platform/audio/PlatformMediaSessionManager.h:86 > + virtual void clientCharacteristicsChanged(PlatformMediaSession&) { } > +
Ditto.
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:228 > + Vector<PlatformMediaSession*> sessionList = sessions();
I think auto would be better here than writing out the vector type. Actually, we could evaluate the vector inside the for loop: for (auto session : sessions()) { That would work with no local variable.
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:230 > + if (!sessionList.size()) > + return nullptr;
This isn’t needed. It doesn’t optimize anything.
Eric Carlson
Comment 12
2016-04-12 06:10:31 PDT
Created
attachment 276231
[details]
Patch for landing.
WebKit Commit Bot
Comment 13
2016-04-12 08:19:26 PDT
Comment on
attachment 276231
[details]
Patch for landing. Clearing flags on attachment: 276231 Committed
r199351
: <
http://trac.webkit.org/changeset/199351
>
WebKit Commit Bot
Comment 14
2016-04-12 08:19:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug