Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp
@@ -153,7 +153,6 @@ void PlatformMediaSessionManager::removeSession(PlatformMediaSession& session)
     LOG(Media, "PlatformMediaSessionManager::removeSession - %p", &session);
     
     size_t index = m_sessions.find(&session);
-    ASSERT(index != notFound);
     if (index == notFound)
         return;
     
@@ -380,7 +379,7 @@ void PlatformMediaSessionManager::stopAllMediaPlaybackForProcess()
 {
     Vector<PlatformMediaSession*> sessions = m_sessions;
     for (auto* session : sessions)
-        session->pauseSession();
+        session->stopSession();
 }
 
 }
